k8s/bases/infrastructure/controllers/opencost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opencost
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
